--- a/se der tempo/chat2.html
+++ b/se der tempo/chat2.html
@@ -4,8 +4,12 @@
 <link rel="stylesheet" href="/chat2.css" >
 
 
-
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+    </style>
 
 
 <body>
